# MAPS-KS22F256

HWDesignFile/MAPS-DOCK/: ADC.Sch  CAN.Sch  DAC.SCH  DOCK.PCB  Dock.Sch  Emulator.Sch  I2C.Sch  I2S.Sch  IR.Sch  Joystick.Sch  Key.Sch  LCM.Sch  LED.Sch  MAPS_Dock_BOM.xlsx  SDIO.Sch  SPI.Sch  Touch.Sch  UART.Sch  USB.Sch  _JUMP.Sch  _Power.Sch
HWDesignFile/MAPS-KS22F256/: CAN.Sch  ISO7816.Sch  KS22F256.Sch  LCDM_SPI.Sch  MAPS-KS22F256.Sch  MAPS_KS22F256a.PCB  Power.Sch
HWDesignFile/MAPS-KS22F256/Gerber/: MAPS_KS22F256a.DRR  MAPS_KS22F256a.EXTREP  MAPS_KS22F256a.GBL  MAPS_KS22F256a.GBO  MAPS_KS22F256a.GBP  MAPS_KS22F256a.GBS  MAPS_KS22F256a.GD1  MAPS_KS22F256a.GG1  MAPS_KS22F256a.GKO  MAPS_KS22F256a.GM1  MAPS_KS22F256a.GPB  MAPS_KS22F256a.GPT  MAPS_KS22F256a.GTL  MAPS_KS22F256a.GTO  MAPS_KS22F256a.GTP  MAPS_KS22F256a.GTS  MAPS_KS22F256a.LDP  MAPS_KS22F256a.REP  MAPS_KS22F256a.RUL  MAPS_KS22F256a.TXT  MAPS_KS22F256a.apr  Pick Place for MAPS_KS22F256a.csv  Pick Place for MAPS_KS22F256a.txt  Status Report.Txt
LinDemo/mcu-sdk-2.0-lin-demo/: SW-Content-Register-KSDK2.0.0_KS22F_1.0.0.txt
LinDemo/mcu-sdk-2.0-lin-demo/examples/mapsks22/: board.h  clock_config.c
LinDemo/mcu-sdk-2.0-lin-demo/lib/ksdk_platform_lib/armgcc/MKS22F12/: CMakeLists.txt  build_all.bat  build_debug.bat  build_release.bat
LinDemo/mcu-sdk-2.0-lin-demo/middleware/lin_stack/: FSL_LIN_Stack_Package_4.5.4_ReleaseNotes.txt  license.txt
LinDemo/mcu-sdk-2.0-lin-demo/platform/devices/: devices.csv  fsl_device_registers.h
LinDemo/mcu-sdk-2.0-lin-demo/platform/flash/: SSD_FTFx_Common.h  SSD_FTFx_Config.h  SSD_FTFx_Internal.h  SSD_FTFx_Misc.h  SSD_FTFx_Types.h  SSD_FTFx_internal.c  flash_cache_clear.c  flash_command_sequence.c  flash_erase.c  flash_erase_all.c  flash_erase_all_execute_only_segments.c  flash_erase_all_unsecure.c  flash_get_property.c  flash_get_security_state.c  flash_init.c  flash_is_execute_only.c  flash_is_protected.c  flash_program.c  flash_program_once.c  flash_program_partition.c  flash_program_section.c  flash_protection.c  flash_read_once.c  flash_read_resource.c  flash_security_bypass.c  flash_set_flexram_function.c  flash_swap_control.c  flash_verify_erase.c  flash_verify_erase_all.c  flash_verify_erase_all_execute_only_segments.c  flash_verify_program.c  fsl_flash.h
SDK2.0.0_KS22F_1.0.0/: SW-Content-Register-KSDK2.0.0_KS22F_1.0.0.txt  ksdk_manifest.xml
SDK2.0.0_KS22F_1.0.0/boards/mapsks22/rtos_examples/ucosiii_hello/armgcc/: CMakeLists.txt
SDK2.0.0_KS22F_1.0.0/devices/MKS22F12/drivers/: fsl_adc16.c  fsl_flash.c  fsl_flash.h  fsl_flexcan.c  fsl_flexcan.h  fsl_mcg.c  fsl_tpm.c  fsl_tpm.h
SDK2.0.0_KS22F_1.0.0/docs/: Kinetis SDK v.2.0 API Reference Manual.html
SDK2.0.0_KS22F_1.0.0/docs/Kinetis SDK v.2.0 API Reference Manual/: arch.html  dir_09f9dadd705c180f0f6fcba2157ed2a9.html  dir_27520577c3d33edf81ffa63786490c32.html  dir_3c8ef24bd02dc25b699b901733412397.html  dir_416fc20155a03b7bbc5728a57d236b9f.html  dir_48dd3c62d7c86167056c35ed6b546d27.html  dir_4eaab06f456111991ff05c9b9cb737cb.html  dir_50c0f6d3977876a8fb6acc75ece63018.html  dir_58e102d2449f7b3d87d5edc08313c5d7.html  dir_5c96277754ed418959ea3b47c456d5c0.html  dir_81cd625641a90df482300fc494d26ddb.html  dir_83c4f67939b2e50b6dc50fe3fc259b2d.html  dir_89fd88b21369a8fc685427310a5a5fe7.html  dir_9108bfa6c83c7c513e3e0128411a10b0.html  dir_95bc3e7ac98e4e44438a28d0eb625bbb.html  dir_9986937d5c2d55a7e5d1d4820166229f.html  dir_ac7a2beb2464fcf2f50409acf0bc6e08.html  dir_b07b1803b08e3bfa8752acf7d436415b.html  dir_b1c4d21f93a7826ef4aed70b30552b97.html  dir_b33ed5b80b075b6e24b0f1f0112a8b04.html  dir_b38072318156de4984ac57667f7c931f.html  dir_b60bc431cd2d2a4b7e645c1f73116460.html  dir_bda58036682f346ab3d015dd2d42b321.html  dir_bebc14e255be79244de9e03d794361f1.html  dir_bf71e8795d5ec3bf1a04b9a740296e07.html  dir_c40c443a376df1bc90d73c3b618643fe.html  dir_c5a52a81292cf9a5167198f4f346d6d9.html  dir_c938a579b44771c570cc4401caca1213.html  dir_cac61d4c063aa297ebf4006623d62dc6.html  dir_ceb1318614fac7b51868fff54187d808.html  dir_e78230b9814187c44d2cfec602885c0a.html  dir_ea5f9633cc51d3e2a6a258aee7e636f0.html  dir_ea982a4a90bbf64c8a612131ad2f0fcb.html  dir_ec833bc67e5cf360257865320ccbe339.html  dir_fa5fdb8d20f935f25433a14a3646651d.html  group__Serial.html  group__Serial.js  group__adc16.html  group__adc16.js  group__adc16__driver.html  (+125 more)
SDK2.0.0_KS22F_1.0.0/docs/Kinetis SDK v.2.0 API Reference Manual/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_2.js  enums_4.js  enums_5.js  enums_7.js  enums_a.js  enums_b.js  enumvalues_0.js  (+54 more)
SDK2.0.0_KS22F_1.0.0/docs/usb/: USB Stack Device Reference Manual.html  USB Stack Host Reference Manual.html
SDK2.0.0_KS22F_1.0.0/docs/usb/USB Stack Device Reference Manual/: dir_044d3be185b2379d01a6ee7526a195e8.html  dir_04aabe7450f478f1bee5f017666770e9.html  dir_06c40d1e17b0dcb1fadfb3e6a6f91bda.html  dir_10498c5d82d39b374ffc1721c7740862.html  dir_1772368293292c8c6c367cedfe3fa22d.html  dir_1c5dd60b5d2be40bfac3fe6ec22bd971.html  dir_1e5f5afb5db92531b7e8401d7b5f73f5.html  dir_2026e00ca0a5b126fb592180d6d8bf41.html  dir_263476cd6c7e7972aaa49321d8d81b9a.html  dir_26697ce89470f95960127198e2466e6a.html  dir_269bb04d40cbac1564939ca3c660db3f.html  dir_2843b6d40d6218909811d63089796a0c.html  dir_2a3055026ef316b4198c69e839a5d1e4.html  dir_2a48f2a14389b833a829c01c4b6d0812.html  dir_2d65332f7b74cc55a928394948f2dfbf.html  dir_34f625152eb748a29ac3d5e2a9401be0.html  dir_37154cdd56d090e0f899234c40bf43bc.html  dir_382ae560874c78a3f7e9ba33a7512225.html  dir_385512ff10e68974c5d8f7884486fded.html  dir_3b28e15309038d77781d9ebf2d198afa.html  dir_3e36573cd74b98531274a52a74d87074.html  (+145 more)
UseCases/: readme.md
UseCases/examples/: .gitignore
UseCases/platform/devices/: fsl_device_registers.h
(+4423 files in other folders)
